# cc-hud

./: AGENTS.md  Cargo.toml  EGUI_MIGRATION_PLAN.md  README.md  REFACTOR_PLAN.md  TOOLTIP_HEADERS.md  cc-hud-functions.sh
.sem/: cache.db
chat_log/: 20260322.0.cc-hud-skill-tracking-ac3-planning.md  20260322.1.thinking-tokens-color-fix.md  20260322.2.cc-hud-energy-model-context-countdown.md  20260322.3.cc-hud-energy-charts-tooltip-vline.md  20260323.0.cc-hud-energy-audit-commit.md  20260406.0.cc-hud-multi-provider-registry.md  20260406.1.20260406.1.cc-hud-perf-filters-ux.md  20260407.0.cc-hud-budget-tooltip-ux.md  20260407.1.cc-hud-time-mode-bars.md  20260407.2.cc-hud-stats-legend-tooltip.md  20260407.3.cc-hud-stats-budget-tooltip.md  20260407.4.cc-hud-stats-budget-tooltip-v2.md  20260408.0.cc-hud-legend-stripbuilder-refactor.md  20260411.0.remove-small-mode-and-fix-window-controls.md  20260411.1.eframe-migration-plan.md  20260411.2.egui-table-migration-session-events.md  20260411.3.cc-hud-egui-table-migration.md  20260411.4.cc-hud-egui-table-structural-fix.md  20260411.5.cc-hud-egui-table-event-expansion-implementation.md  20260411.6.cc-hud-egui-table-event-columns-redesign.md  20260412.1.cc-hud-legend-perf-hover-dots.md  20260412.2.cc-hud-chart-cache-plotpoint.md  20260412.3.cc-hud-dual-nav-strips.md  20260412.4.cc-hud-tiles-grid-time-alpha.md  20260412.5.cc-hud-time-mode-plot-bounds-fix.md  20260412.7.cc-hud-egui-table-column-split-flex.md  LATEST.md
proxy/: README.md  thinking_capture.py
src/: 0_scene.rs  1_render_egui.rs  2_legend.rs  2_model_registry.rs  3_legend_table.rs  README.md  energy.rs  geometry.rs  lib.rs  main.rs  main_iced.rs  usage.rs
src/agent_harnesses/: README.md  claude_code.rs  opencode.rs
src/agent_harnesses/fixtures/: sample_session.jsonl
src/agent_harnesses/snapshots/: cc_hud__agent_harnesses__claude_code__tests__events.snap  cc_hud__agent_harnesses__claude_code__tests__session_aggregates.snap
src/anchors/: README.md  mod.rs  terminal.rs  tmux.rs
src/snapshots/: cc_hud__energy__tests__api_markup_opus.snap  cc_hud__energy__tests__custom_config.snap  cc_hud__energy__tests__grid_regions.snap  cc_hud__energy__tests__mixed_model_session.snap  cc_hud__energy__tests__opus_1m_output.snap  cc_hud__energy__tests__realistic_opus_session.snap  cc_hud__energy__tests__session_accumulator.snap  cc_hud__energy__tests__tier_scaling.snap  cc_hud__energy__tests__water_li_sanity.snap
tests/: ingest_snapshot.rs
tests/fixtures/: sample_session.jsonl
tests/snapshots/: ingest_snapshot__events.snap  ingest_snapshot__session_aggregates.snap
