[package]
name = "cc-hud"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.29"
egui_plot = "0.29"
egui_overlay = { version = "0.9", default-features = false, features = ["egui_default", "glfw_default", "wgpu"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.25"
libc = "0.2"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication"] }

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
